css/style.css
:root {
  --primary-color: #6c63ff;
  --secondary-color: #f9f7fe;
  --heading-font-family: "Salsa", cursive;
  --default-font-family: "Poppins", sans-serif;
  --box-shadow: 0px 7px 29px 0px rgba(0, 0, 0, 0.2);
}

nav {
  background: #fff;
  line-height: 25px;
  padding: 15px 15px;
}

nav img {
  border-radius: 0;
  vertical-align: middle;
  width: 25px;
}

nav ul {
  padding: 0;
  margin: 0;
}

nav li {
  display: inline;
  list-style: none;
  margin-left: 12px;
}

nav a {
  color: #000;
  text-decoration: none;
}

nav a:hover,
nav a.active {
  color: var(--primary-color);
}

h1 {
  color: var(--primary-color);
  font-family: var(--heading-font-family);
  font-weight: bold;
}

h2,
p {
  font-family: var(--default-font-family);
}

img {
  border-radius: 5px;
  box-shadow: var(--box-shadow);
}

.navbar-brand {
  color: #000;
  font-size: 20px;
}

.content-top {
  margin: 140px 0 80px;
}

.content-top h1 {
  font-size: 72px;
}

.btn-primary {
  background: var(--primary-color);
  border: 1px solid var(--primary-color);
  font-family: var(--default-font-family);
  margin: 10px 0;
  padding: 10px 15px;
}

.btn-primary:hover {
  background: var(--secondary-color);
  border: 1px solid var(--primary-color);
  color: var(--primary-color);
  font-family: var(--default-font-family);
}

.quote {
  font-family: "Courier Prime", monospace;
  font-style: italic;
}

.hero {
  background: var(--secondary-color);
  padding: 220px 20px;
  display: flex;
  justify-content: space-evenly;
}

.hero h1 {
  font-size: 50px;
}

.hero h2 {
  font-size: 20px;
  margin-top: 20px;
}

.hero p {
  font-size: 30px;
  font-weight: 700;
  margin: 0;
}

.hero .btn-primary {
  margin-top: 20px;
}

.hero img {
  border-radius: 10px;
  box-shadow: var(--box-shadow);
  max-width: 250px;
}

/* tablet users */
@media (max-width: 768px) {
  .container {
    max-width: 90%;
  }

  .row h2 {
    font-size: 20px;
  }

  .row p {
    font-size: 12px;
  }

  .row .btn-primary {
    font-size: 10px;
  }

  .hero h1 {
    font-size: 40px;
  }

  .hero h2 {
    font-size: 15px;
    margin: 10px 0;
  }

  .hero p {
    font-size: 20px;
    font-weight: 700;
    margin: 0;
  }

  .btn-primary {
    font-size: 15px;
  }
}

/* mobile users */
@media (max-width: 576px) {
  h2 {
    margin-top: 20px;
    text-align: center;
  }

  label {
    font-size: 15px;
  }

  .btn-primary {
    display: block;
    font-size: 12px;
    margin: 0 auto;
    max-width: 105px;
  }

  .container .row {
    padding-bottom: 40px;
    border-bottom: 1px dashed rgb(198, 198, 198);
    text-align: center;
  }

  .container .row:last-child {
    border: none;
  }

  .hero h1,
  .content-top h1 {
    font-size: 56px;
    text-align: center;
  }

  .hero h2 {
    font-size: 20px;
    margin: 15px 0;
    text-align: center;
  }

  .hero p {
    font-size: 30px;
    font-weight: 700;
    margin: 0;
    text-align: center;
  }

  .hero .btn-primary {
    margin: 40px auto;
  }
}

